--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,13 +1,5 @@
 <h1 class="text-center">修改文章</h1>
 
-<div class="col-md-4 col-md-offset-4">
-  <%= simple_form_for [@group,@post] do |f| %>
-    <div class="form-group">
-      <%= f.input :content %>
-    </div>
-    <div class="form-action">
-      <%= f.submit "Submit", disable_with: "Submitting...", class: "btn btn-primary" %>
-    </div>
-  <% end %>
 
-</div>
+  <%= render "form", group: @group, post: @post %>
+
